--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "ajv": "^6.8.1",
+    "axios": "^0.18.0",
     "history": "^4.7.2",
+    "jsonwebtoken": "^8.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
